FEAT: add header

--- a/index.html
+++ b/index.html
@@ -1,35 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link
             rel="shortcut icon"
             href="assets/butterfly.ico"
             type="image/x-icon"
-        /> 
-    <link rel="stylesheet" href="css/style.css">
-    <title>Document</title>
-</head>
-<body>
-    <nav class="nav">
-        <div class="nav__links">
-            <div class="nav__logo">
-                <picture>
-                    <img src="assets/butterfly_logo.png" a lt="logo butterfly">
-                </picture>
+        />
+        <link rel="stylesheet" href="css/style.css" />
+        <title>Guía CSS Moderno</title>
+    </head>
+    <body>
+        <!-- NAV -->
+        <nav class="nav">
+            <div class="nav__links">
+                <div class="nav__logo">
+                    <picture>
+                        <img
+                            src="assets/butterfly_logo.png"
+                            a
+                            lt="logo butterfly"
+                        />
+                    </picture>
+                </div>
+                <label for="check" class="nav__icon">
+                    <img
+                        src="assets/bx-menu-alt-right.svg"
+                        alt="icono hamburger"
+                        class="nav__icon--img"
+                    />
+                </label>
+                <input type="checkbox" id="check" class="nav__checkbox" />
+                <div class="nav__link">
+                    <a href="#">Contenido</a>
+                    <a href="#">Galería</a>
+                    <a href="#">Trabajos</a>
+                </div>
             </div>
-            <label for="check" class="nav__icon">
-                <img src="assets/bx-menu-alt-right.svg" alt="icono hamburger" class="nav__icon--img">
-            </label>
-            <input type="checkbox" id="check" class="nav__checkbox">
-            <div class="nav__link">
-                <a href="#">Contenido</a>
-                <a href="#">Galería</a>
-                <a href="#">Trabajos</a>
+        </nav>
+
+        <header class="header" ">
+            <div class="header__text">
+                <h1 class="header__title">Aprendiendo CSS Moderno</h1>
             </div>
-        </div>
-    </nav>
-</body>
+            <div class="header__wave" style="height: 150px; overflow: hidden">
+                <svg
+                    viewBox="0 0 500 150"
+                    preserveAspectRatio="none"
+                    style="height: 100%; width: 100%"
+                >
+                    <path
+                        d="M-7.24,55.75 C149.99,150.00 351.63,-49.98 500.00,49.98 L500.00,150.00 L0.00,150.00 Z"
+                        style="stroke: none; fill: #ffe8d6"
+                    ></path>
+                </svg>
+            </div>
+        </header>
+
+        
+    </body>
 </html>
