FEAT: add one section

--- a/index.html
+++ b/index.html
@@ -17,13 +17,18 @@
         <nav class="nav">
             <div class="nav__links">
                 <div class="nav__logo">
-                    <picture>
-                        <img
-                            src="assets/butterfly_logo.png"
-                            a
-                            lt="logo butterfly"
-                        />
-                    </picture>
+                    <div >
+                        <picture>
+                            <img
+                                src="assets/butterfly_logo.png"
+                                a
+                                lt="logo butterfly"
+                            />
+                        </picture>
+                    </div>
+                    <div>
+                        <p>Happy Coding!</p>
+                    </div>
                 </div>
                 <label for="check" class="nav__icon">
                     <img
@@ -59,6 +64,19 @@
             </div>
         </header>
 
+        <!-- ONE-SECTION -->
+        <section class="one-section container">
+            <div class="one-section__title">
+                <h1>Guía para aprender CSS Moderno</h1>
+                <p>Para aprender CSS Moderno hay que ponerle muchas ganas, ilusión y perseverancia.</p>
+                <p>No es fácil programar, desarrollar, diseñar, pero poco a poco y siendo constante lograrás muchas cosas maravillosas.</p>
+                <p>En esta guía voy a dejar algunos truquillos que he aprendido en cursos y que seguro que te sirven para poder poner en marcha lo que tienes en mente.</p>
+                <p>Por supuesto, todo es mejorable, yo también estoy aprendiendo y todo lo que tú saques y mejores, por favor...¡compártelo!!</p>
+                <p>Todo desarrollador tiene que ser amigo de toda esta maravillosa comunidad, no competimos, nos ayudamos.</p>
+                <p>Disfruta de ello, por mucho tiempo y esfuerzo que te cueste, yo soy un claro ejemplo de ello, ¡¡soy Junior con muchas ganas!!. ¡No te rindas!</p>
+                <p>Happy Coding!</p>
+            </div>
+        </section>
         
     </body>
 </html>
