FEAT: add two section

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <h1>Guía para aprender CSS Moderno</h1>
                 <p>Para aprender CSS Moderno hay que ponerle muchas ganas, ilusión y perseverancia.</p>
                 <p>No es fácil programar, desarrollar, diseñar, pero poco a poco y siendo constante lograrás muchas cosas maravillosas.</p>
-                <p>En esta guía voy a dejar algunos truquillos que he aprendido en cursos y que seguro que te sirven para poder poner en marcha lo que tienes en mente.</p>
+                <p>En esta guía voy a dejar algunas prácticas que he aprendido en cursos y que seguro que te sirven para poder poner en marcha lo que tienes en mente.</p>
                 <p>Por supuesto, todo es mejorable, yo también estoy aprendiendo y todo lo que tú saques y mejores, por favor...¡compártelo!!</p>
                 <p>Todo desarrollador tiene que ser amigo de toda esta maravillosa comunidad, no competimos, nos ayudamos.</p>
                 <p>Disfruta de ello, por mucho tiempo y esfuerzo que te cueste, yo soy un claro ejemplo de ello, ¡¡soy Junior con muchas ganas!!. ¡No te rindas!</p>
@@ -78,5 +78,87 @@
             </div>
         </section>
         
+
+        <!-- TWO SECTION -->
+        <section class="two-section container">
+            <h2 class="two-section__title">Animaciones</h2>
+            <div class="two-section__grid">
+                <div class="two-section__video">
+                    <video src="/assets/video/animaciones/Landing Page Animada.mp4" controls></video>
+                    <p>Descripción</p>
+                    <a href="#">Enlace a github</a>
+                </div>
+                <div class="two-section__video">
+                    <video src="/assets/video/animaciones/Galería Img Efecto Lightbox.mp4" controls></video>
+                    <p>Descripción</p>
+                    <a href="#">Enlace a github</a>
+                </div>
+                <div class="two-section__video">
+                    <video src="/assets/video/animaciones/Card Overlay Transform-Transition.mp4" controls></video>
+                    <p>Descripción</p>
+                    <a href="#">Enlace a github</a>
+                </div>
+                <div class="two-section__video">
+                    <video src="/assets/video/animaciones/Formulario Animado Grid-Transition-Transform.mp4" controls></video>
+                    <p>Descripción</p>
+                    <a href="#">Enlace a github</a>
+                </div>
+            </div>
+            <div class="two-section__cta">
+                <a href="#">Ver más</a>
+            </div>
+            <h2 class="two-section__title">Grid</h2>
+            <div class="two-section__grid">
+                <div class="two-section__video">
+                    <video src="/assets/video/grid/card presentation.mp4" controls></video>
+                    <p>Descripción</p>
+                    <a href="#">Enlace a github</a>
+                </div>
+                <div class="two-section__video">
+                    <video src="/assets/video/grid/cards-grid.mp4" controls></video>
+                    <p>Descripción</p>
+                    <a href="#">Enlace a github</a>
+                </div>
+                <div class="two-section__video">
+                    <video src="/assets/video/grid/formulario de contacto grid.mp4" controls></video>
+                    <p>Descripción</p>
+                    <a href="#">Enlace a github</a>
+                </div>
+                <div class="two-section__video">
+                    <video src="/assets/video/grid/galeria-grid.mp4" controls></video>
+                    <p>Descripción</p>
+                    <a href="#">Enlace a github</a>
+                </div>
+            </div>
+            <div class="two-section__cta">
+                <a href="#">Ver más</a>
+            </div>
+            <h2 class="two-section__title">Prácticas Varias</h2>
+            <div class="two-section__grid">
+                <div class="two-section__video">
+                    <video src="/assets/video/varias prácticas/Bordes Y Sombras.mp4" controls></video>
+                    <p>Descripción</p>
+                    <a href="#">Enlace a github</a>
+                </div>
+                <div class="two-section__video">
+                    <video src="/assets/video/varias prácticas/Pr-ctica-Variables-Formulario.mp4" controls></video>
+                    <p>Descripción</p>
+                    <a href="#">Enlace a github</a>
+                </div>
+                <div class="two-section__video">
+                    <video src="/assets/video/varias prácticas/Práctica Flexbox Landing Page.mp4" controls></video>
+                    <p>Descripción</p>
+                    <a href="#">Enlace a github</a>
+                </div>
+                <div class="two-section__video">
+                    <video src="/assets/video/varias prácticas/Práctica gradient.mp4" controls></video>
+                    <p>Descripción</p>
+                    <a href="#">Enlace a github</a>
+                </div>
+            </div>
+            <div class="two-section__cta">
+                <a href="#">Ver más</a>
+            </div>
+        </section>
     </body>
 </html>
