--- a/index.html
+++ b/index.html
@@ -40,8 +40,9 @@
                 <input type="checkbox" id="check" class="nav__checkbox" />
                 <div class="nav__link">
                     <a href="#">Contenido</a>
-                    <a href="#">Galería</a>
-                    <a href="#">Trabajos</a>
+                    <a href="#">Animaciones</a>
+                    <a href="#">Grid</a>
+                    <a href="#">Prácticas Varias</a>
                 </div>
             </div>
         </nav>
@@ -160,5 +161,15 @@
                 <a href="#">Ver más</a>
             </div>
         </section>
+        <footer class="footer">
+            <div class="footer__text">
+                <p>Happy Coding</p>
+                <p>Bea CL &copy; 2021</p>
+            </div>
+            <div class="footer__links">
+                <a href="#" class="footer--link"><img src="/assets/bxl-linkedin.svg" alt="icono linkedin"></a>
+                <a href="#" class="footer--link"><img src="/assets/bxl-github.svg" alt="icono github"></a>
+            </div>
+        </footer>
     </body>
 </html>
