--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
             href="assets/butterfly.ico"
             type="image/x-icon"
         />
+        <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
         <link rel="stylesheet" href="css/style.css" />
         <title>Guía CSS Moderno</title>
     </head>
@@ -167,9 +168,10 @@
                 <p>Bea CL &copy; 2021</p>
             </div>
             <div class="footer__links">
-                <a href="#" class="footer--link"><img src="/assets/bxl-linkedin.svg" alt="icono linkedin"></a>
-                <a href="#" class="footer--link"><img src="/assets/bxl-github.svg" alt="icono github"></a>
+                <a href="#"><i class='bx bxl-linkedin-square footer--link' ></i></a>
+                <a href="#" ><i class='bx bxl-github footer--link'></i></a>
             </div>
+            
         </footer>
     </body>
 </html>
