FEAT: add animaciones

--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
                 </label>
                 <input type="checkbox" id="check" class="nav__checkbox" />
                 <div class="nav__link">
-                    <a href="#">Contenido</a>
-                    <a href="#">Animaciones</a>
-                    <a href="#">Grid</a>
-                    <a href="#">Prácticas Varias</a>
+                    <a href="index.html">Contenido</a>
+                    <a href="#animaciones">Animaciones</a>
+                    <a href="#grid">Grid</a>
+                    <a href="#practicas">Prácticas Varias</a>
                 </div>
             </div>
         </nav>
@@ -67,8 +67,8 @@
         </header>
 
         <!-- ONE-SECTION -->
-        <section class="one-section container">
-            <div class="one-section__title">
+        <section class="one-section container" id="contenido">
+            <div class="one-section__title" >
                 <h1>Guía para aprender CSS Moderno</h1>
                 <p>Para aprender CSS Moderno hay que ponerle muchas ganas, ilusión y perseverancia.</p>
                 <p>No es fácil programar, desarrollar, diseñar, pero poco a poco y siendo constante lograrás muchas cosas maravillosas.</p>
@@ -83,7 +83,7 @@
 
         <!-- TWO SECTION -->
         <section class="two-section container">
-            <h2 class="two-section__title">Animaciones</h2>
+            <h2 class="two-section__title" id="animaciones">Animaciones</h2>
             <div class="two-section__grid">
                 <div class="two-section__video">
                     <video src="/assets/video/animaciones/Landing Page Animada.mp4" controls></video>
@@ -107,9 +107,9 @@
                 </div>
             </div>
             <div class="two-section__cta">
-                <a href="#">Ver más</a>
+                <a href="animaciones.html">Ver más</a>
             </div>
-            <h2 class="two-section__title">Grid</h2>
+            <h2 class="two-section__title" id="grid">Grid</h2>
             <div class="two-section__grid">
                 <div class="two-section__video">
                     <video src="/assets/video/grid/card presentation.mp4" controls></video>
@@ -135,7 +135,7 @@
             <div class="two-section__cta">
                 <a href="#">Ver más</a>
             </div>
-            <h2 class="two-section__title">Prácticas Varias</h2>
+            <h2 class="two-section__title" id="practicas">Prácticas Varias</h2>
             <div class="two-section__grid">
                 <div class="two-section__video">
                     <video src="/assets/video/varias prácticas/Bordes Y Sombras.mp4" controls></video>
