--- a/animaciones.html
+++ b/animaciones.html
@@ -42,7 +42,7 @@
                 <div class="nav__link">
                     <a href="index.html">Contenido</a>
                     <a href="#animaciones">Animaciones</a>
-                    <a href="#grid">Grid</a>
+                    <a href="grid.html">Grid</a>
                     <a href="#practicas">Prácticas Varias</a>
                 </div>
             </div>
