--- a/index.html
+++ b/index.html
@@ -87,23 +87,23 @@
             <div class="two-section__grid">
                 <div class="two-section__video">
                     <video src="/assets/video/animaciones/Landing Page Animada.mp4" controls></video>
-                    <p>Descripción</p>
-                    <a href="#">Enlace a github</a>
+                    <p>Landing Page Animada</p>
+                    <a href="https://github.com/beacl3320/Landing-Page-Animada">Enlace a github</a>
                 </div>
                 <div class="two-section__video">
                     <video src="/assets/video/animaciones/Galería Img Efecto Lightbox.mp4" controls></video>
-                    <p>Descripción</p>
-                    <a href="#">Enlace a github</a>
+                    <p>Galería efectos</p>
+                    <a href="https://github.com/beacl3320/Galer-a-Img-Efecto-Lightbox">Enlace a github</a>
                 </div>
                 <div class="two-section__video">
                     <video src="/assets/video/animaciones/Card Overlay Transform-Transition.mp4" controls></video>
-                    <p>Descripción</p>
-                    <a href="#">Enlace a github</a>
+                    <p>Card Overlay</p>
+                    <a href="https://github.com/beacl3320/Card-Overlay-Transform-Transition">Enlace a github</a>
                 </div>
                 <div class="two-section__video">
                     <video src="/assets/video/animaciones/Formulario Animado Grid-Transition-Transform.mp4" controls></video>
-                    <p>Descripción</p>
-                    <a href="#">Enlace a github</a>
+                    <p>Formulario Animado</p>
+                    <a href="https://github.com/beacl3320/Formulario-Animado-Grid-Transition-Transform">Enlace a github</a>
                 </div>
             </div>
             <div class="two-section__cta">
@@ -113,27 +113,27 @@
             <div class="two-section__grid">
                 <div class="two-section__video">
                     <video src="/assets/video/grid/card presentation.mp4" controls></video>
-                    <p>Descripción</p>
-                    <a href="#">Enlace a github</a>
+                    <p>Card Presentation</p>
+                    <a href="https://github.com/beacl3320/Card-Presentation">Enlace a github</a>
                 </div>
                 <div class="two-section__video">
                     <video src="/assets/video/grid/cards-grid.mp4" controls></video>
-                    <p>Descripción</p>
-                    <a href="#">Enlace a github</a>
+                    <p>Grid Cards</p>
+                    <a href="https://github.com/beacl3320/cards-grid">Enlace a github</a>
                 </div>
                 <div class="two-section__video">
                     <video src="/assets/video/grid/formulario de contacto grid.mp4" controls></video>
-                    <p>Descripción</p>
-                    <a href="#">Enlace a github</a>
+                    <p>Formulario Contacto Grid</p>
+                    <a href="https://github.com/beacl3320/formulario-de-contacto-grid">Enlace a github</a>
                 </div>
                 <div class="two-section__video">
                     <video src="/assets/video/grid/galeria-grid.mp4" controls></video>
-                    <p>Descripción</p>
-                    <a href="#">Enlace a github</a>
+                    <p>Galería Grid</p>
+                    <a href="https://github.com/beacl3320/galeria-grid">Enlace a github</a>
                 </div>
             </div>
             <div class="two-section__cta">
-                <a href="#">Ver más</a>
+                <a href="grid.html">Ver más</a>
             </div>
             <h2 class="two-section__title" id="practicas">Prácticas Varias</h2>
             <div class="two-section__grid">
