FEAT: add practicas

--- a/grid.html
+++ b/grid.html
@@ -43,7 +43,7 @@
                     <a href="index.html">Contenido</a>
                     <a href="animaciones.html">Animaciones</a>
                     <a href="#grid">Grid</a>
-                    <a href="#practicas">Prácticas Varias</a>
+                    <a href="practicas.html">Prácticas Varias</a>
                 </div>
             </div>
         </nav>
