--- a/index.html
+++ b/index.html
@@ -139,27 +139,27 @@
             <div class="two-section__grid">
                 <div class="two-section__video">
                     <video src="/assets/video/varias prácticas/Bordes Y Sombras.mp4" controls></video>
-                    <p>Descripción</p>
-                    <a href="#">Enlace a github</a>
+                    <p>Bordes y Sombras</p>
+                    <a href="https://github.com/beacl3320/Bordes-Y-Sombras">Enlace a github</a>
                 </div>
                 <div class="two-section__video">
                     <video src="/assets/video/varias prácticas/Pr-ctica-Variables-Formulario.mp4" controls></video>
-                    <p>Descripción</p>
-                    <a href="#">Enlace a github</a>
+                    <p>Variables Formulario</p>
+                    <a href="https://github.com/beacl3320/Pr-ctica-Variables-Formulario">Enlace a github</a>
                 </div>
                 <div class="two-section__video">
                     <video src="/assets/video/varias prácticas/Práctica Flexbox Landing Page.mp4" controls></video>
-                    <p>Descripción</p>
-                    <a href="#">Enlace a github</a>
+                    <p>Landing Page Flexbox</p>
+                    <a href="https://github.com/beacl3320/Pr-ctica-Flexbox-Landing-Page">Enlace a github</a>
                 </div>
                 <div class="two-section__video">
                     <video src="/assets/video/varias prácticas/Práctica gradient.mp4" controls></video>
-                    <p>Descripción</p>
-                    <a href="#">Enlace a github</a>
+                    <p>Práctica Gradient</p>
+                    <a href="https://github.com/beacl3320/Pr-ctica-gradient">Enlace a github</a>
                 </div>
             </div>
             <div class="two-section__cta">
-                <a href="#">Ver más</a>
+                <a href="practicas.html">Ver más</a>
             </div>
         </section>
         <footer class="footer">
