FEAT: add changes in pages

--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
                 <input type="checkbox" id="check" class="nav__checkbox" />
                 <div class="nav__link">
                     <a href="index.html">Contenido</a>
-                    <a href="#animaciones">Animaciones</a>
-                    <a href="#grid">Grid</a>
-                    <a href="#practicas">Prácticas Varias</a>
+                    <a href="animaciones.html">Animaciones</a>
+                    <a href="grid.html">Grid</a>
+                    <a href="practicas.html">Prácticas Varias</a>
                 </div>
             </div>
         </nav>
@@ -95,11 +95,11 @@
                     <p>Galería efectos</p>
                     <a href="https://github.com/beacl3320/Galer-a-Img-Efecto-Lightbox">Enlace a github</a>
                 </div>
-                <div class="two-section__video">
+                <!-- <div class="two-section__video">
                     <video src="/assets/video/animaciones/Card Overlay Transform-Transition.mp4" controls></video>
                     <p>Card Overlay</p>
                     <a href="https://github.com/beacl3320/Card-Overlay-Transform-Transition">Enlace a github</a>
-                </div>
+                </div> -->
                 <div class="two-section__video">
                     <video src="/assets/video/animaciones/Formulario Animado Grid-Transition-Transform.mp4" controls></video>
                     <p>Formulario Animado</p>
@@ -126,22 +126,22 @@
                     <p>Formulario Contacto Grid</p>
                     <a href="https://github.com/beacl3320/formulario-de-contacto-grid">Enlace a github</a>
                 </div>
-                <div class="two-section__video">
+                <!-- <div class="two-section__video">
                     <video src="/assets/video/grid/galeria-grid.mp4" controls></video>
                     <p>Galería Grid</p>
                     <a href="https://github.com/beacl3320/galeria-grid">Enlace a github</a>
-                </div>
+                </div> -->
             </div>
             <div class="two-section__cta">
                 <a href="grid.html">Ver más</a>
             </div>
             <h2 class="two-section__title" id="practicas">Prácticas Varias</h2>
             <div class="two-section__grid">
-                <div class="two-section__video">
+               <!--  <div class="two-section__video">
                     <video src="/assets/video/varias prácticas/Bordes Y Sombras.mp4" controls></video>
                     <p>Bordes y Sombras</p>
                     <a href="https://github.com/beacl3320/Bordes-Y-Sombras">Enlace a github</a>
-                </div>
+                </div> -->
                 <div class="two-section__video">
                     <video src="/assets/video/varias prácticas/Pr-ctica-Variables-Formulario.mp4" controls></video>
                     <p>Variables Formulario</p>
