MODIFY: height body

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <p>En esta guía voy a dejar algunas prácticas que he aprendido en cursos y que seguro que te sirven para poder poner en marcha lo que tienes en mente.</p>
                 <p>Por supuesto, todo es mejorable, yo también estoy aprendiendo y todo lo que tú saques y mejores, por favor...¡compártelo!!</p>
                 <p>Todo desarrollador tiene que ser amigo de toda esta maravillosa comunidad, no competimos, nos ayudamos.</p>
-                <p>Disfruta de ello, por mucho tiempo y esfuerzo que te cueste, yo soy un claro ejemplo de ello, ¡¡soy Junior con muchas ganas!!. ¡No te rindas!</p>
+                <p>Disfruta de ello, ¡¡por mucho tiempo y esfuerzo que te cueste sigue practicando!! Yo también soy Junior y con muchas ganas!! ¡No te rindas!</p>
                 <p>Happy Coding!</p>
             </div>
         </section>
