FEAT: add scroll and arrow

--- a/template.html
+++ b/template.html
@@ -40,7 +40,7 @@
                 </label>
                 <input type="checkbox" id="check" class="nav__checkbox" />
                 <div class="nav__link">
-                    <a href="index.html">Contenido</a>
+                    <a href="index.html">Inicio</a>
                     <a href="#animaciones">Animaciones</a>
                     <a href="#grid">Grid</a>
                     <a href="#practicas">Prácticas Varias</a>
