--- a/index.html
+++ b/index.html
@@ -10,17 +10,22 @@
             type="image/x-icon"
         />
         <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
+        <link
+        rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+      />
         <link rel="stylesheet" href="css/style.css" />
         <title>Guía CSS Moderno</title>
     </head>
     <body>
+
         <!-- NAV -->
-        <nav class="nav">
-            <div class="nav__links">
+        <nav class="nav" >
+            <div class="nav__links" >
                 <div class="nav__logo">
-                    <div >
+                    <div>
                         <picture>
-                            <img
+                            <img  class="animate__animated animate__flip"
                                 src="assets/butterfly_logo.png"
                                 a
                                 lt="logo butterfly"
@@ -28,7 +33,7 @@
                         </picture>
                     </div>
                     <div>
-                        <p>Happy Coding!</p>
+                        <p class="animate__animated animate__flip">Happy Coding!</p>
                     </div>
                 </div>
                 <label for="check" class="nav__icon">
@@ -40,7 +45,7 @@
                 </label>
                 <input type="checkbox" id="check" class="nav__checkbox" />
                 <div class="nav__link">
-                    <a href="index.html">Contenido</a>
+                    <a href="index.html">Inicio</a>
                     <a href="animaciones.html">Animaciones</a>
                     <a href="grid.html">Grid</a>
                     <a href="practicas.html">Prácticas Varias</a>
@@ -48,7 +53,7 @@
             </div>
         </nav>
 
-        <header class="header" ">
+        <header class="header" id="header">
             <div class="header__text">
                 <h1 class="header__title">Aprendiendo CSS Moderno</h1>
             </div>
@@ -162,16 +167,19 @@
                 <a href="practicas.html">Ver más</a>
             </div>
         </section>
+        <!-- ARROW -->
+        <div class="arrow">
+            <a href="#header"><i class='bx bx-up-arrow-circle' style='color:#6b705c'></i></a>
+        </div>
         <footer class="footer">
             <div class="footer__text">
                 <p>Happy Coding</p>
                 <p>Bea CL &copy; 2021</p>
             </div>
             <div class="footer__links">
-                <a href="#"><i class='bx bxl-linkedin-square footer--link' ></i></a>
-                <a href="#" ><i class='bx bxl-github footer--link'></i></a>
+                <a href="https://www.linkedin.com/in/beatriz-carpio-lama-603578206/"><i class='bx bxl-linkedin-square footer--link' ></i></a>
+                <a href="https://github.com/beacl3320" ><i class='bx bxl-github footer--link'></i></a>
             </div>
-            
         </footer>
     </body>
 </html>
